# VkBot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/pages/: api_reference.rst
examples/: echo_bot.py  fsm_bot.py  keyboards_bot.py
tests/: conftest.py  test_bot_api.py  test_di.py  test_fsm.py  test_handlers_core.py  test_network.py  test_state.py  test_storage.py  test_types.py  test_types_models.py  test_util.py
tests/state/: conftest.py  test_fsm.py  test_storage.py
vk_bot/: __init__.py  apihelper.py  config.py  di.py  exception.py  handlers.py  http_client.py  types.py  util.py
vk_bot/state/: __init__.py  context.py  fsm.py  group.py  manager.py  storage.py
