[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "vk-bot"
description = "This is how python package should look like!"
repository = "https://github.com/SarkisDarbinyan/vk-bot"
version = "0.2.0"
readme = "README.md"
license = "MIT"

authors = [
  "SarkisDarbinyan",
]
keywords = [
  "wemake-python-package",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
tenacity = "^9.0"
dishka = ">=1.0"
pydantic = ">=2.0"
transitions = ">=0.9"
redis = {version = ">=5.0.0", optional = true}
psycopg = {extras = ["binary"], version = "^3.3.3"}

[tool.poetry.extras]
all = ["redis", "psycopg"]
postgres = ["psycopg"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.19"

wemake-python-styleguide = "^1.5"
ruff = "^0.15"

pytest = "^9.0"
pytest-cov = "^6.1"
pytest-randomly = "^4.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1"
sphinx-autodoc-typehints = "^3.0"
tomli = "^2.2"
myst-parser = "^4.0"
furo = ">=2024.1.29"


[tool.ruff]
# Ruff config: https://docs.astral.sh/ruff/settings
preview = true
fix = true
respect-gitignore = true
target-version = "py310"
line-length = 88

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "C90",   # mccabe
  "I",     # isort
  "N",     # pep8-naming
  "UP",    # pyupgrade
  "YTT",   # flake8-2020
  "S",     # flake8-bandit
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "EXE",   # flake8-executable
  "ISC",   # flake8-implicit-str-concat
  "ICN",   # flake8-import-conventions
  "G",     # flake8-logging-format
  "LOG",   # flake8-logging
  "PIE",   # flake8-pie
  "PT",    # flake8-pytest-style
  "RSE",   # flake8-raise
  "SIM",   # flake8-simplify
  "SLOT",  # flake8-slots
  "PL",    # pylint
  "FLY",   # flynt
  "PERF",  # perflint
  "FURB",  # refurb
  "RUF",   # ruff
]
ignore = [
  "A005",    # stdlib-module-shadowing
  "D",       # pydocstyle (docstrings not enforced)
  "SLF",     # flake8-self (private member access)
  "FBT",     # flake8-boolean-trap
  "COM",     # flake8-commas
  "DTZ",     # flake8-datetimez
  "Q",       # flake8-quotes
  "RET",     # flake8-return
  "PTH",     # flake8-use-pathlib
  "ERA",     # flake8-eradicate
  "TRY",     # tryceratops
  "E501",    # line too long (formatter handles this)
  "ISC001",  # implicit string concat conflicts with `ruff format`
  "ISC003",  # prefer explicit string concat over implicit concat
  "PLR09",   # we have our own complexity rules
  "PLR2004", # do not report magic numbers
  "PLR6301", # do not require classmethod / staticmethod when self not used
  "PLC0415", # import should be at the top-level
  "PLR0913", # too many arguments to function call
  "UP007",   # use `X | Y` for type annotations
  "UP035",   # deprecated-import
  "UP045",   # use `X | None` for type annotations
  "RUF013",  # implicit optional
  "PLW2901", # for loop variable overwritten by assignment target
  "PLW0603", # global statement
  "S311",    # pseudo-random generators not suitable for crypto
  "S110",    # try-except-pass
  "C901",    # function is too complex
  "PLR1702", # too many nested blocks
  "A002",    # argument shadowing builtin
  "RUF012",  # mutable class attributes should be ClassVar
  "SIM105",  # use contextlib.suppress
  "SIM103",  # return condition directly (often less readable)
  "SIM108",  # use ternary (often less readable)
  "PERF203", # try-except in loop
  "PERF403", # manual dict construction (less readable in some cases)
]

# Plugin configs:
mccabe.max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "S101",    # Use of assert detected
  "S106",    # Possible hardcoded password
  "PLR2004", # Magic value used in comparison
  "ARG001",  # Unused function argument
]


[tool.pytest.ini_options]
# pytest config: http://doc.pytest.org/en/latest/customize.html

# Strict `@xfail` by default:
xfail_strict = true
# Fail on warnings:
filterwarnings = ["error"]

addopts = [
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
    # Output:
  "--tb=short",
  # Coverage:
  "--cov=vk_bot",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-branch",
  # Ignores:
  "--ignore=docs",
]


[tool.mypy]
# The mypy configurations: http://bit.ly/2zEl9WI
python_version = "3.11"
ignore_missing_imports = true
warn_no_return = false
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = true
disable_error_code = [
  "arg-type",
  "assignment",
  "call-overload",
  "return-value",
  "attr-defined",
  "import-untyped",
]

[[tool.mypy.overrides]]
# Ignore tests, because we can use fixtures that not quite represent a real type
module = "tests.*"
ignore_errors = true
